Add real publications from Google Scholar
Publications added:
- II-NVM: Enhancing Map Accuracy and Consistency (IEEE RA-L 2025)
- Grounded Curriculum Learning (arXiv 2024) - Selected
- Decremental Dynamics Planning for Robot Navigation (arXiv 2025) - Selected
- GACL: Grounded Adaptive Curriculum Learning (arXiv 2025) - Selected
- Reward Training Wheels: Adaptive Auxiliary Rewards (arXiv 2025) - Selected

All papers processed and formatted for Jekyll Scholar display

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,48 +5,74 @@
 % Google Scholar: https://scholar.google.com/citations?user=VURUgFMAAAAJ
 % Note: Run scripts/sync_google_scholar.py to update from Google Scholar
 
-@inproceedings{wang2024grounded,
-  abbr={In Prep},
-  title={Grounded Curriculum Learning: A Novel Framework for Real-World Reinforcement Learning in Robotics},
-  author={Wang, Linji and Zhao, Liang and others},
-  booktitle={In Preparation for ICRA 2025},
-  year={2024},
-  abstract={We present Grounded Curriculum Learning (GCL), a novel framework that improves real-world reinforcement learning in robotics by aligning simulated task distributions with real-world tasks while considering task sequences and robot performance history. Our approach demonstrates significant improvements in sample efficiency and training stability.},
-  selected={true},
-  bibtex_show={true}
-}
-
-@article{wang2024robotics,
-  abbr={arXiv},
-  title={Reinforcement Learning for Robotic Manipulation: A Survey of Recent Advances},
-  author={Wang, Linji},
-  journal={arXiv preprint},
-  year={2024},
-  abstract={This survey provides a comprehensive overview of recent advances in reinforcement learning for robotic manipulation, focusing on sim-to-real transfer, curriculum learning, and sample efficiency improvements.},
-  bibtex_show={true}
-}
-
-@misc{wang2023vision,
-  abbr={Project},
-  title={Deep Learning for Computer Vision: GANs and Style Transfer},
-  author={Wang, Linji},
-  year={2023},
-  note={Course Project at Carnegie Mellon University},
-  abstract={Implementation and analysis of various GAN architectures including DCGAN and CycleGAN for image generation and style transfer tasks. Achieved competitive results on standard benchmarks.},
-  bibtex_show={true}
-}
-
-@misc{wang2022perception,
-  abbr={CMU},
-  title={Real-time 3D Perception for Robot Navigation},
-  author={Wang, Linji and others},
-  year={2022},
-  note={Research Project at Carnegie Mellon University},
-  abstract={Developed a real-time 3D perception pipeline combining depth sensing and point cloud processing for autonomous robot navigation in dynamic environments.},
-  bibtex_show={true}
-}
 
 % Note: This bibliography will be automatically updated by running:
 % cd scripts && python sync_google_scholar.py
 % or
 % cd scripts && python sync_scholar_advanced.py (requires: pip install scholarly)
+
+@article{zhao2025ii,
+  title={II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping},
+  author={Zhao, Chengwei and Li, Yixuan and Jian, Yina and Xu, Jie and Wang, Linji and Ma, Yongxin and Jin, Xinglai},
+  journal={IEEE Robotics and Automation Letters},
+  year={2025},
+  publisher={IEEE},
+  bibtex_show={true},
+  selected={false},
+  preview={},
+  pdf={},
+  code={},
+  slides={}
+}
+
+@article{wang2024grounded,
+  title={Grounded curriculum learning},
+  author={Wang, Linji and Xu, Zifan and Stone, Peter and Xiao, Xuesu},
+  journal={arXiv preprint arXiv:2409.19816},
+  year={2024},
+  bibtex_show={true},
+  selected={true},
+  preview={},
+  pdf={},
+  code={},
+  slides={}
+}
+
+@article{lu2025decremental,
+  title={Decremental Dynamics Planning for Robot Navigation},
+  author={Lu, Yuanjie and Xu, Tong and Wang, Linji and Hawes, Nick and Xiao, Xuesu},
+  journal={arXiv preprint arXiv:2503.20521},
+  year={2025},
+  bibtex_show={true},
+  selected={true},
+  preview={},
+  pdf={},
+  code={},
+  slides={}
+}
+
+@article{wang2025gacl,
+  title={GACL: Grounded Adaptive Curriculum Learning with Active Task and Performance Monitoring},
+  author={Wang, Linji and Xu, Zifan and Stone, Peter and Xiao, Xuesu},
+  journal={arXiv preprint arXiv:2508.02988},
+  year={2025},
+  bibtex_show={true},
+  selected={true},
+  preview={},
+  pdf={},
+  code={},
+  slides={}
+}
+
+@article{wang2025reward,
+  title={Reward Training Wheels: Adaptive Auxiliary Rewards for Robotics Reinforcement Learning},
+  author={Wang, Linji and Xu, Tong and Lu, Yuanjie and Xiao, Xuesu},
+  journal={arXiv preprint arXiv:2503.15724},
+  year={2025},
+  bibtex_show={true},
+  selected={true},
+  preview={},
+  pdf={},
+  code={},
+  slides={}
+}
